small padding fixes SVG cutoff at certain zooms

--- a/frontend/components/Icon/_styles.scss
+++ b/frontend/components/Icon/_styles.scss
@@ -2,4 +2,8 @@
   // keeps this element the same size as the svg
   // aligns properly in text, buttons, dropdowns, summary tile custom component
   display: inline-flex;
+
+  svg {
+    padding: 1px;
+  }
 }
